<resources>
    <string name="app_name">Retrofit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="character_detail_fragment">Character Detail Fragment</string>
    <string name="lorem">lorem</string>
    <string name="character_fragment">Character Fragment</string>
    <string name="name">Name</string>
    <string name="episode">Episode</string>
    <string name="created">Created</string>
    <string name="air_date">Air_date</string>
    <string name="dimension">Dimension</string>
    <string name="type">Type</string>
    <string name="status">Status</string>

</resources>