<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <TextView
        android:id="@+id/item_name"
        android:layout_marginStart="15dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:text="@string/name"
        android:textStyle="bold"
       app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txt_item_dimension"
        android:paddingTop="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:text="@string/dimension"
        app:layout_constraintTop_toBottomOf="@id/item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txt_item_created"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:text="@string/created"
        android:paddingTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/txt_item_dimension"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txt_item_type"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:text="@string/type"
        android:paddingTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/txt_item_created"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</androidx.constraintlayout.widget.ConstraintLayout>